# legalcodex

./: .coveragerc  .gitignore  API_Documentation.md  README.md  dbg.py  mypy.ini  pytest.ini  release-notes.md  setup.cfg  setup.py
.github/: copilot-instructions.md  legalcodex-api.openapi.yaml
.github/prompts/: add-full-docstrings.prompt.md  add-module-docstring.prompt.md  code-review.prompt.md  mypy-strict-safe-fix.prompt.md  plan-chatFrontendUi.prompt.md
.github/skills/: create_cli_command.md  create_tests.md  run_tests.md  update_release_notes_from_commit.md
frontend/: index.html  styles.css
frontend/js/: auth-app.js  chat-api.js  logger.js
legalcodex/: __main__.py  _config.py  _engine_selector.py  _environ.py  _logs.py  _misc.py  _prompts.py  _schema.py  _singleton.py  _types.py  _user_access.py  chat_behaviour.py  context.py  embedding.py  engine.py  exceptions.py  message.py  serialization.py
legalcodex/_cli/: _log_window.py  cli_cmd.py  cmd_chat.py  cmd_chat_remote.py  (+3 more)
planning/: chat-frontend-ui.md  chat_app.md  development-plan.md  frontend-authentication-plan.md  milestone-1-plan.md  milestone-b-document-ingestion.md  milestone-c-remote-chat-api.md  milestone-d-fastapi-status-server.md  milestone-d-paas-deployment.md  milestone-d-saas-deployment.md  milestone-e-postgres-migration.md.md  milestone-file-access-and-mcp.md  task-7-responsive-a11y-qa-checklist.md
scripts/: walk2.py  xml_struct.py  xml_walk.py
tests/: test_chat_behaviour.py  test_chat_context.py  test_chat_session.py  test_placeholder.py  test_singleton.py  test_textblock.py
(+39 files in other folders)
