[metadata]
name = legalcodex
description = Legal Codex
version = 0.1.0

[options]
python_requires = >= 3.10
package_dir=
    =.
packages=find:

zip_safe = False

install_requires =
    
   

[options.extras_require]
dev =
    mypy
    pytest
    pytest-cov
    

[options.packages.find]
where=.

[options.entry_points]
console_scripts =
    lc = legalcodex.__main__:main
